# concierge_bot

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
backend/app/: alembic.ini  pyproject.toml
backend/app/app/: __main__.py  app.py
backend/app/app/configs/: DB.py  Settings.py  bot.py
backend/app/app/jinja_templates/: about.j2  balance.j2  choose_language_WA.j2  familiar_user.j2  help.j2  item_info.j2  localization_changed.j2  main_menu.j2  new_subscription.j2  new_user.j2  payment_doesnt_work.j2  profile.j2  registration_choose_localization_WA.j2  registration_localization_chosen.j2  registration_name.j2  registration_phone.j2  request_info.j2  services.j2  start.j2  subscription.j2  user_request_info.j2  welcome.j2
backend/app/app/metadata/: admin_keyboards.py  errors.py  states.py
backend/app/app/middlewares/: get_localization.py  get_subscription.py
backend/app/app/models/: AppModels.py  DBModels.py  app_models.py  db_models.py
backend/app/app/repositories/: BalanceRepository.py  MetaDataRepository.py  SubscriptionRepository.py  UserRepository.py  admin_repository.py  user_repository.py
backend/app/app/routes/: admin.py  back.py  balance.py  cancel.py  change_localization.py  main_menu.py  services.py  start_router.py  subscription.py
backend/app/app/services/: UserService.py  admin_service.py  payment_service.py  user_service.py
backend/app/app/supplier/: google_sheets_supplier.py  redis_supplier.py  yoomoney_supplier.py
backend/app/app/utils/: keyboard_builder.py  template_builder.py
backend/app/migration/: env.py
(+17 files in other folders)
