[tool.poetry]
name = "concierge-bot"
version = "0.1.0"
description = ""
authors = ["algakz06 <77662392+algakz06@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
sqlalchemy = {extras = ["async"], version = "^2.0.35"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
google-api-python-client = "^2.142.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
loguru = "^0.7.2"
jinja2 = "^3.1.4"
redis = "^5.0.8"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
yookassa = "^3.3.0"
gspread = "^6.1.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/Users/kimdaniil/Library/Caches/pypoetry/virtualenvs/"
venv = "concierge-bot-XkPKOpQ2-py3.12"
